<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1FAFAF6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#11FAF7F3"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/Start_message"
        android:textColor="#D02979FF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="#08F3F2F1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:fontFamily="sans-serif-black"
            android:onClick="mondaySchedule"
            android:text="@string/Monday_Timetable"
            android:textSize="18sp"
            app:backgroundTint="#C12979FF"
            app:cornerRadius="1000dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:onClick="tuesdaySchedule"
            android:text="@string/Tuesday_Timetable"
            android:textSize="18sp"
            app:backgroundTint="#C12979FF"
            app:cornerRadius="1000dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:onClick="wednesdaySchedule"
            android:text="@string/Wednesday_Timetable"
            android:textSize="18sp"
            app:backgroundTint="#C12979FF"
            app:cornerRadius="1000dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:onClick="thursdaySchedule"
            android:text="@string/Thursday_Timetable"
            android:textSize="18sp"
            app:backgroundTint="#C12979FF"
            app:cornerRadius="1000dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:onClick="fridaySchedule"
            android:text="@string/Friday_Timetable"
            android:textSize="18sp"
            app:backgroundTint="#C12979FF"
            app:cornerRadius="1000dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>