<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Wednesday">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="152dp"
        android:fontFamily="sans-serif-black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F3F5F8">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="172dp"
                android:layout_height="match_parent"
                android:background="#C12979FF"
                android:fontFamily="sans-serif-medium"
                android:text="@string/column_name_1"
                android:textSize="24sp"
                tools:text="@string/column_name_1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:background="#C12979FF"
                android:fontFamily="sans-serif-medium"
                android:text="@string/column_name_2"
                android:textSize="24sp"
                tools:text="@string/column_name_2" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="172dp"
                android:layout_height="64dp"
                android:background="#482979FF"
                android:fontFamily="sans-serif-medium"
                android:text="@string/time_1"
                android:textSize="18sp"
                tools:text="@string/time_1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="172dp"
                android:layout_height="match_parent"
                android:background="#482979FF"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#F4F7FB">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="171dp"
                android:layout_height="59dp"
                android:background="#C12979FF"
                android:fontFamily="sans-serif-medium"
                android:text="@string/time_2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#C12979FF"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:background="#C12979FF"
                android:fontFamily="sans-serif-medium"
                android:text="@string/time_3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="186dp"
                android:layout_height="64dp"
                android:background="#C12979FF"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>